add group selector

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 * {
     display: inline-block;
 }
+
+.yes, .no {
+    border-style: solid;
+    font-size: 28px;
+    font-family: helvetica, "times new roman", sans-serif;
+}
